--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "chrome-extension-typescript-starter",
   "version": "1.0.0",
   "description": "chrome-extension-typescript-starter",
-  "main": "index.js",
   "scripts": {
-    "watch": "webpack --config webpack/webpack.dev.js --watch",
+    "prewatch": "yarn install",
+    "watch": "webpack --config webpack/webpack.dev.js --watch --progress",
+    "postwatch": "sdsd",
     "build": "webpack --config webpack/webpack.prod.js",
-    "clean": "rimraf dist",
+    "clean": "rimraf dist node_modules",
     "test": "npx jest",
     "style": "prettier --write \"src/**/*.{ts,tsx}\""
   },
@@ -14,28 +15,36 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/chibat/chrome-extension-typescript-starter.git"
+    "url": "https://github.com/itxve/chrome-extension-typescript-starter.git"
   },
   "dependencies": {
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "@octokit/rest": "^18.5.3",
+    "antd": "^4.16.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@types/chrome": "0.0.100",
-    "@types/jest": "^25.1.4",
-    "@types/jquery": "^3.3.33",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "copy-webpack-plugin": "^6.1.0",
-    "glob": "^7.1.6",
+    "@types/chrome": "^0.0.141",
+    "@types/jest": "^26.0.23",
+    "@types/react": "^17.0.6",
+    "@types/react-dom": "^17.0.5",
+    "copy-webpack-plugin": "^9.0.0",
+    "css-loader": "^5.2.5",
+    "file-loader": "^6.2.0",
+    "glob": "^7.1.7",
     "jest": "^26.6.3",
-    "prettier": "^2.2.1",
-    "rimraf": "^3.0.2 ",
-    "ts-jest": "^25.2.1 ",
-    "ts-loader": "^6.2.1",
-    "typescript": "~3.8.3 ",
-    "webpack": "^4.44.1",
-    "webpack-cli": "~3.3.11",
-    "webpack-merge": "~4.2.2"
+    "less": "^4.1.1",
+    "less-loader": "^9.0.0",
+    "mini-css-extract-plugin": "^1.6.0",
+    "prettier": "^2.3.0",
+    "rimraf": "^3.0.2",
+    "style-loader": "^2.0.0",
+    "ts-jest": "^26.5.6",
+    "ts-loader": "^9.2.3",
+    "typescript": "^4.3.4",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.37.1",
+    "webpack-cli": "^4.7.0",
+    "webpack-merge": "^5.7.3"
   }
 }
