--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,21 @@
 {
-    "compilerOptions": {
-        "strict": true,
-        "module": "commonjs",
-        "target": "es6",
-        "esModuleInterop": true,
-        "sourceMap": false,
-        "rootDir": "src",
-        "outDir": "dist/js",
-        "noEmitOnError": true,
-        "jsx": "react",
-        "typeRoots": [ "node_modules/@types" ]
+  "compilerOptions": {
+    "strict": true,
+    "module": "commonjs",
+    "target": "es6",
+    "lib": ["es6", "dom"],
+    "esModuleInterop": true,
+    "sourceMap": false,
+    "rootDir": "src",
+    "outDir": "dist",
+    "noEmitOnError": true,
+    "jsx": "react",
+    "typeRoots": ["node_modules/@types", "./src/types"],
+    "paths": {
+      "@com/*": ["./src/components/*"],
+      "@ts/*": ["./src/ts/*"],
+      "@assets/*": ["./src/assets/*"]
     }
+  },
+  "include": ["./src"]
 }
